--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     </div>
     
     <div class="container">
+
+        <!-- ToDo Listen Titel -->
         <h1>
             <script src="/js/todotitle.js"></script>
             <div id="todo-title">
@@ -49,8 +51,20 @@
             </div>
             <img src="/assests/edit-tool.png" height="20px" width="20px" id="edit-name-img" onclick="editTitle()">
         </h1>
+    
+    <!-- Edit Title Popup -->
+    <div id="editTitlePopup" class="popup">
+        <div class="popup-content">
+            <label for="newTitle">Neuer Listen Name:</label>
+            <input type="text" id="newTitle">
+            <br>
+            <button onclick="applyTitleChanges()" id="acceptTitleBtn">Änderungen übernehmen</button>
+            <button onclick="closeTitleEditPopup()" id="cancelTitleBtn">Abbrechen</button>
+        </div>
+    </div>
 
         <div id="todo-container">
+            <!-- Input Container -->
             <div class="input-container">
                 <input type="text" id="todo-input" placeholder="Neues ToDo">
                 <input type="date" id="due-date" placeholder="Bis wann">
@@ -65,6 +79,32 @@
                     </select>
                 </div>
 
+                <!-- Edit Popout -->
+                <div id="editPopup" class="popup">
+                    <div class="popup-content">
+                        <span class="close" onclick="closeEditPopup()">&times;</span>
+                        <label for="newText">ToDo Name:</label>
+                        <input type="text" id="newText">
+                        <br>
+                        <label for="newDueDate">Neues Datum (DD.MM.YYYY):</label>
+                        <input type="text" id="newDueDate">
+                        <br>
+                        <label for="newCategory">Neue Kategorie:</label>
+                        <input type="text" id="newCategory">
+                        <br>
+                        <label for="newPriority">Neue Priorität:</label>
+                        <select name="newPriority" id="newPriority" placeholder="Priorität" class="edit-dropdown-menu">
+                            <option value="N/A" class="edit-dropdown-content">   </option>
+                            <option value="Niedrig" class="edit-dropdown-content">Niedrig</option>
+                            <option value="Mittel" class="edit-dropdown-content">Mittel</option>
+                            <option value="Hoch" class="edit-dropdown-content">Hoch</option>
+                            <option value="Sehr Hoch" class="edit-dropdown-content">Sehr Hoch</option>
+                        </select>
+                        <br>
+                        <button onclick="applyChanges()" id="acceptBtn" >Änderungen übernehmen</button>
+                    </div>
+                </div>
+
                 <button onclick="addTodo()" class="addBtn">Hinzufügen</button>
             </div>
             <ul id="todo-list"></ul>
@@ -76,8 +116,8 @@
         </div>
         <div id="sort-container">
             <div id="sortieren">
-                <label><input type="radio" name="sortOption" value="ascending" onchange="sortierenDatum(), toggleSortierenDatumDelayed()"> Sortieren aufsteigend</label><br>
-                <label><input type="radio" name="sortOption" value="descending" onchange="sortierenDatum(), toggleSortierenDatumDelayed()"> Sortieren absteigend</label><br>
+                <label><input type="radio" name="sortOption" value="ascending" onchange="sortierenDatum()"> Sortieren aufsteigend</label><br>
+                <label><input type="radio" name="sortOption" value="descending" onchange="sortierenDatum()"> Sortieren absteigend</label><br>
               </div>
         </div>
     </div>
