--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 
     <!-- Webseiten Titel und FavIcon -->
-    <title>ToDo Liste</title>
-    <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/2387/2387679.png">
+    <title>ToDue</title>
+    <link rel="icon" type="image/x-icon" href="/assests/clipboard.png">
 </head>
 
 <body>
@@ -47,7 +47,7 @@
         <h1>
             <script src="/js/todotitle.js"></script>
             <div id="todo-title">
-                ToDo Liste
+                ToDue Liste
             </div>
             <img src="/assests/edit-tool.png" height="20px" width="20px" id="edit-name-img" onclick="editTitle()">
         </h1>
